--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,10 @@ jobs:
         pytest --cov=. --cov-report=xml
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
         file: ./coverage.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
 #
 #  javascript-tests:
 #    runs-on: ubuntu-latest
