--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest --cov --junitxml=junit.xml --cov-report=xml:coverage.xml
+        pytest --cov=src --junitxml=junit.xml --cov-report=xml:coverage.xml
 
     - name: Upload test results to Codecov
       if: ${{ !cancelled() }}
