--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -21,19 +21,19 @@ jobs:
       with:
         python-version: 3.11
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18
-        cache: 'npm'
+#    - name: Set up Node.js
+#      uses: actions/setup-node@v4
+#      with:
+#        node-version: 18
+#        cache: 'npm'
 
     - name: Install Python dependencies
       run: |
         pip install bandit safety mypy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Install Node.js dependencies
-      run: npm ci
+#    - name: Install Node.js dependencies
+#      run: npm ci
 
     - name: Python security check
       run: |
@@ -43,7 +43,7 @@ jobs:
     - name: Python type checking
       run: mypy . || true
 
-    - name: JavaScript/TypeScript linting
-      run: |
-        npm run lint || true
-        npm audit || true
+#    - name: JavaScript/TypeScript linting
+#      run: |
+#        npm run lint || true
+#        npm audit || true
