--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: 3.13
 
 #    - name: Set up Node.js
 #      uses: actions/setup-node@v4
@@ -37,11 +37,11 @@ jobs:
 
     - name: Python security check
       run: |
-        bandit -r . -f json -o bandit-report.json || true
+        bandit -r . -f json -o bandit-report.json
         safety check
 
     - name: Python type checking
-      run: mypy . || true
+      run: mypy .
 
 #    - name: JavaScript/TypeScript linting
 #      run: |
