--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Install Python dependencies
       run: |
-        pip install bandit safety mypy
+        pip install bandit mypy pip-audit
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 #    - name: Install Node.js dependencies
@@ -37,8 +37,16 @@ jobs:
 
     - name: Python security check
       run: |
-        bandit -r . -f json -o bandit-report.json
-        safety check
+        # To uncomment the following lines, ensure you have a .bandit file configured
+        bandit -r . -f sarif -o bandit.sarif || true
+        pip-audit --format=sarif --output=pip-audit.sarif
+
+    - name: Upload SARIF to GitHub
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: |
+          bandit.sarif
+          pip-audit.sarif
 
     - name: Python type checking
       run: mypy .
