--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Install Python dependencies
       run: |
-        pip install bandit mypy pip-audit
+        pip install bandit mypy pip-audit  bandit2sarif
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 #    - name: Install Node.js dependencies
@@ -38,15 +38,25 @@ jobs:
     - name: Python security check
       run: |
         # To uncomment the following lines, ensure you have a .bandit file configured
-        bandit -r . -f sarif -o bandit.sarif || true
-        pip-audit --format=sarif --output=pip-audit.sarif
+        bandit -r . -f json -o bandit.json || true
+        bandit2sarif -i bandit.json -o bandit.sarif || true
+        pip-audit --format=json --output=pip-audit.json || true
 
     - name: Upload SARIF to GitHub
       uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: |
           bandit.sarif
-          pip-audit.sarif
+
+    - name: Upload raw reports as artifacts
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: security-reports
+        path: |
+          bandit.json
+          bandit.html
+          pip-audit.json
 
     - name: Python type checking
       run: mypy .
