--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Install Python dependencies
       run: |
-        pip install bandit mypy pip-audit bandit2sarif
+        pip install bandit mypy pip-audit
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 #    - name: Install Node.js dependencies
