--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -34,14 +34,28 @@ jobs:
 
 #    - name: Install Node.js dependencies
 #      run: npm ci
-
-    - name: Python security check
+    - name: Run Bandit
       run: |
-        # To uncomment the following lines, ensure you have a .bandit file configured
-        bandit -r . -f json -o bandit.json || true
-        python bandit_json_to_sarif.py bandit.json bandit.sarif || true
+         bandit -r . -f json -o bandit.json || true
+         if [ -s bandit.json ]; then
+          python bandit_json_to_sarif.py bandit.json bandit.sarif
+          test -s bandit.sarif || { echo "bandit.sarif missing"; exit 1; }
+        else
+          echo "Skipping Bandit SARIF (no bandit.json)."
+        fi
+
+    - name: Run pip-audit
+      run: |
         pip-audit --format=json --output=pip-audit.json || true
-        python pip_audit_json_to_sarif.py pip-audit.json pip-audit.sarif || true
+        if [ -s pip-audit.json ]; then
+          python pip_audit_json_to_sarif.py pip-audit.json pip-audit.sarif
+          test -s pip-audit.sarif || { echo "pip-audit.sarif missing"; exit 1; }
+        else
+          echo "Skipping pip-audit SARIF (no pip-audit.json)."
+        fi
+
+    - name: List generated files
+      run: ls -l *.json *.sarif || true
 
     - name: Upload SARIF to GitHub
       uses: github/codeql-action/upload-sarif@v3
@@ -49,6 +63,7 @@ jobs:
         sarif_file: |
           bandit.sarif
           pip-audit.sarif
+      continue-on-error: true
 
     - name: Upload raw reports as artifacts
       if: always()
