--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -60,9 +60,7 @@ jobs:
     - name: Upload SARIF to GitHub
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: |
-          bandit.sarif
-          pip-audit.sarif
+        sarif_file: bandit.sarif
       continue-on-error: true
 
     - name: Upload raw reports as artifacts
