--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Install Python dependencies
       run: |
-        pip install bandit mypy pip-audit pylint
+        pip install bandit pip-audit pylint numpy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Python security check (Bandit)
