--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -32,23 +32,15 @@ jobs:
 
     - name: Python security check (Bandit)
       uses: shundor/python-bandit-scan@ab1d87dfccc5a0ffab88be3aaac6ffe35c10d6cd
-      with: # optional arguments
-        # exit with 0, even with results found
-        exit_zero: true # optional, default is DEFAULT
-        # Github token of the repository (automatically created by Github)
+      with:
+        exit_zero: true # exit with 0, even with results found
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information.
-        # File or directory to run bandit on
-        # path: # optional, default is .
-        # Report only issues of a given severity level or higher. Can be LOW, MEDIUM or HIGH. Default is UNDEFINED (everything)
-        # level: # optional, default is UNDEFINED
-        # Report only issues of a given confidence level or higher. Can be LOW, MEDIUM or HIGH. Default is UNDEFINED (everything)
-        # confidence: # optional, default is UNDEFINED
-        # comma-separated list of paths (glob patterns supported) to exclude from scan (note that these are in addition to the excluded paths provided in the config file) (default: .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg)
-        # excluded_paths: # optional, default is DEFAULT
-        # comma-separated list of test IDs to skip
-        # skips: # optional, default is DEFAULT
-        # path to a .bandit file that supplies command line arguments
-        # ini_path: # optional, default is DEFAULT
+        # path:  File or directory to run bandit on
+        # level: Report only issues of a given severity level or higher. LOW, MEDIUM, HIGH or UNDEFINED (default)
+        # confidence: Report only issues of a given confidence level or higher. LOW, MEDIUM, HIGH or UNDEFINED (default)
+        # excluded_paths: comma-separated list of paths (glob patterns supported)
+        # skips: comma-separated list of test IDs to skip
+        # ini_path: .bandit file that supplies command line arguments
 
     - name: lint code (pylint)
       run: pylint --rcfile=.pylintrc .
