--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -72,15 +72,10 @@ jobs:
       with:
         category: "/language:${{matrix.language}}"
 
-    - name: Python dependency vulnerability check (pip-audit)
-      run: |
-        pip-audit --format=sarif --output=pip-audit-results.sarif --progress-spinner=off || true
-
-    - name: Upload pip-audit SARIF results
-      uses: github/codeql-action/upload-sarif@v3
+    - name: Scan for vulnerabilities with pip-audit
+      uses: TrailOfBits/gh-action-pip-audit@v1
       with:
-        sarif_file: pip-audit-results.sarif
-        category: pip-audit
+        sarif: true # This ensures SARIF output is generated and uploaded
 
 #    - name: Python type checking
 #      run: mypy .
