--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,15 @@
 *.pyc
 *.py~
 
+# Test and coverage reports
+coverage.xml
+htmlcov/
+.coverage
+junit.xml
+
 # Windows temporary files
 *.swp
+
+# Others
+.idea/
+
