--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -10,6 +10,7 @@ permissions:
 jobs:
   dependency-review:
     runs-on: ubuntu-latest
+    if: ${{ github.event.repository.private == false }}
     steps:
       - name: 'Checkout repository'
         uses: actions/checkout@v4
