--- a/bdd/pytest.ini
+++ b/bdd/pytest.ini
@@ -1,7 +1,6 @@
 [pytest]
-addopts = --junitxml=junit-bdd.xml -q -p no:pytest_cov
+addopts = --junitxml=junit-bdd.xml -v -p no:pytest_cov
 testpaths = .
 python_files = test_*.py
 filterwarnings =
     ignore::DeprecationWarning
-
