--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,15 +37,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov black pylint pytest-timeout
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
 
     - name: Format check with black
       run: black --check .
 
     - name: Lint code (pylint)
-      run: |
-        if [ -f .pylintrc ]; then pylint --rcfile=.pylintrc .; else pylint .; fi
+      run: pylint --rcfile=.pylintrc .
 
     - name: Test with pytest
       run: pytest -c tests/pytest.ini tests
