--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.13"]
+        python-version: ["3.11"]
 
     steps:
     - uses: actions/checkout@v4
@@ -37,19 +37,21 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov black pylint pytest-timeout
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+        python -m playwright install
 
     - name: Format check with black
       run: black --check .
 
     - name: Lint code (pylint)
-      run: |
-        if [ -f .pylintrc ]; then pylint --rcfile=.pylintrc .; else pylint .; fi
+      run: pylint --rcfile=.pylintrc .
 
     - name: Test with pytest
-      run: pytest
+      run: pytest -c tests/pytest.ini tests
 
+    - name: Run BDD tests
+      run: pytest -c bdd/pytest.ini bdd
 
     - name: Upload test report artifact
       if: always()
